[package]
name = "sandbox"
version = "0.1.0"
authors = ["Justin Luoma <justin@justinluoma.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
embedded-hal = "1.0.0-alpha.9"
embedded-svc = "0.24.0"
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
log = "0.4.17"
max7219 = "0.3.1"


[build-dependencies]
embuild = "0.31.0"
